--- a/yaml/MLA8.yaml
+++ b/yaml/MLA8.yaml
@@ -10,5 +10,7 @@ writer: pdf
 pdf-engine: xelatex
 template: {{PATH-TO-TEMPLATES}}/MLA8/template.tex
 csl: {{PATH-TO-TEMPLATES}}/MLA8/MLA8.csl
-citeproc: true
 shift-heading-level-by: -1
+filters:
+  - citeproc
+  - {{PATH-TO-TEMPLATES}}/wordcount.lua
